@@ -217,6 +217,29 @@ la_sh_gnu_pltexit (Elf32_Sym *sym, unsigned int ndx, uintptr_t *refcook,
 
   return 0;
 }
+#elif defined __mc68000__
+Elf32_Addr
+la_m68k_gnu_pltenter (Elf32_Sym *sym, unsigned int ndx, uintptr_t *refcook,
+		      uintptr_t *defcook, La_m68k_regs *regs,
+		      unsigned int *flags, const char *symname,
+		      long int *framesizep)
+{
+  printf ("m68k_pltenter: symname=%s, st_value=%#lx, ndx=%u, flags=%u\n",
+	  symname, (long int) sym->st_value, ndx, *flags);
+
+  return sym->st_value;
+}
+
+unsigned int
+la_m68k_gnu_pltexit (Elf32_Sym *sym, unsigned int ndx, uintptr_t *refcook,
+		     uintptr_t *defcook, const La_m68k_regs *inregs,
+		     La_m68k_retval *outregs, const char *symname)
+{
+  printf ("m68k_pltexit: symname=%s, st_value=%#lx, ndx=%u, retval=%tu\n",
+	  symname, (long int) sym->st_value, ndx, outregs->lrv_d0);
+
+  return 0;
+}
 #else
 # error "architecture specific code needed"
 #endif
